se edita estilo

--- a/Index.html
+++ b/Index.html
@@ -131,7 +131,7 @@
 </div>
 <!-- info -->
   </body>
-  <footer class="text-center">
+  <footer class="text-center bg-secundario text-light">
     <div class="container pt-3">
       <div class="row">
         <div class="col-12">
