--- a/contacto.html
+++ b/contacto.html
@@ -78,4 +78,13 @@
     </div>
   </div>
 </body>
+<footer class="text-center bg-secundario text-light">
+  <div class="container pt-3">
+    <div class="row">
+      <div class="col-12">
+        <p>Copyright &copy; WOOF & MIAU. Todos los derechos reservados.</p>
+      </div>
+    </div>
+  </div>
+</footer>
 </html>
