--- a/tienda.html
+++ b/tienda.html
@@ -123,36 +123,70 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6 col-lg-4">
-                <h3>Paseos peludos</h3>
-                <p> ¿Buscas paseos perrunos durante la semana con personas que amen a los animales? ¡Fundación Woof or Miau! ofrece este servicio! Con voluntarios que son previamente capacitados en manejo animal, podemos apoyarte en una tenencia y convivencia responsable íntegra. El valor del servicio se divide en un honorario que recibe el voluntario por su tiempo y una diferencia de apoyo a la labor de la Fundación en sus áreas de educación y rescate.» </p>
-                <p> <a class="btn btn-link" href="Más Información">View details &raquo;</a></p>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                <h3>¿Sesiones de juego con tu amigo felino?</h3>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, illo, libero esse assumenda culpa consequatur exercitationem beatae odio praesentium nihil iste ipsum reiciendis pariatur. Recusandae, reiciendis quidem eaque aut ab. </p>
-                <p> <a class="btn btn-link" href="Más Información">View details &raquo;</a></p>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                <h3>¡Servicio de Peluquería a domicilio!</h3>
-                <p> Corte de pelo correspondiente a la raza o el solicitado, rasurado y despunte en trasero y zonas intimas, limpieza de orejas, corte de uñas, peinado en aire caliente perfume y abrillantador.</p>
-                <p> <a class="btn btn-link" href="Más Información">View details &raquo;</a></p>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                <h3>Vacunas y Desparasitaciones</h3>
-                <p> <em class="icon-desktop "></em> Consulta veterinaria especializada sin salir de tu casa. Un médico veterinario se desplazará hasta tu domicilio para realizar chequeos rutinarios</p>
-                <p> <a class="btn btn-link" href="Más Información">View details &raquo;</a></p>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                <h3>Salud dental</h3>
-                <p> Una rutina que incluya cepillados y controles regulares, así como una nutrición adecuada, puede ayudar a su mascota a vivir una vida larga y saludable.</p>
-                <p> <a class="btn btn-link" href="Más Información">View details &raquo;</a></p>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                <h3>Asesorias de como cuidar a tu mascota</h3>
-                <p>No se limita solo a bañarlo, además, siempre es importante cortar sus uñas, limpiar sus oídos, sus dientes, pelaje, etc. Mantén limpio el comedero y bebedero de agua, así como su cama y entorno. Ejercita a tu mascota.</p>
-                <p> <a class="btn btn-link" href="Más Información">View details &raquo;</a></p>
-                </div>
+              <div class="text-center m-4 p-4 bg-primario">
+                <svg xmlns=" class="icon icon-tabler icon-tabler-truck" width="96" height="96" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <circle cx="7" cy="17" r="2" />
+                  <circle cx="17" cy="17" r="2" />
+                  <path d="M5 17h-2v-11a1 1 0 0 1 1 -1h9v12m-4 0h6m4 0h2v-6h-8m0 -5h5l3 5" />
+                </svg>
+                <h3 style="color: aliceblue;" >Paseos peludos</h3>
+                <p class="">¿Buscas paseos perrunos durante la semana con personas que amen a los animales? ¡Fundación Woof or Miau! ofrece este servicio! Con voluntarios que son previamente capacitados en manejo animal, podemos apoyarte en una tenencia y convivencia responsable íntegra. El valor del servicio se divide en un honorario que recibe el voluntario por su tiempo y una diferencia de apoyo a la labor de la Fundación en sus áreas de educación y rescate.» </p>
+              </div>
+              <div class="text-center m-4 p-4 bg-primario">
+                <svg xmlns=" class="icon icon-tabler icon-tabler-truck" width="96" height="96" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <circle cx="7" cy="17" r="2" />
+                  <circle cx="17" cy="17" r="2" />
+                  <path d="M5 17h-2v-11a1 1 0 0 1 1 -1h9v12m-4 0h6m4 0h2v-6h-8m0 -5h5l3 5" />
+                </svg>
+                <h3 style="color: aliceblue;" >¿Sesiones de juego con tu amigo felino?</h3>
+                <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, illo, libero esse assumenda culpa consequatur exercitationem beatae odio praesentium nihil iste ipsum reiciendis pariatur. Recusandae, reiciendis quidem eaque aut ab. </p>
+              </div>
+
+              <div class="text-center m-4 p-4 bg-primario">
+                <svg xmlns=" class="icon icon-tabler icon-tabler-truck" width="96" height="96" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <circle cx="7" cy="17" r="2" />
+                  <circle cx="17" cy="17" r="2" />
+                  <path d="M5 17h-2v-11a1 1 0 0 1 1 -1h9v12m-4 0h6m4 0h2v-6h-8m0 -5h5l3 5" />
+                </svg>
+                <h3 style="color: aliceblue;" >¡Servicio de Peluquería a domicilio!</h3>
+                <p class="">Corte de pelo correspondiente a la raza o el solicitado, rasurado y despunte en trasero y zonas intimas, limpieza de orejas, corte de uñas, peinado en aire caliente perfume y abrillantador </p>
+              </div>
+
+              <div class="text-center m-4 p-4 bg-primario">
+                <svg xmlns=" class="icon icon-tabler icon-tabler-truck" width="96" height="96" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <circle cx="7" cy="17" r="2" />
+                  <circle cx="17" cy="17" r="2" />
+                  <path d="M5 17h-2v-11a1 1 0 0 1 1 -1h9v12m-4 0h6m4 0h2v-6h-8m0 -5h5l3 5" />
+                </svg>
+                <h3 style="color: aliceblue;" >Vacunas y Desparasitaciones</h3>
+                <p class="">Consulta veterinaria especializada sin salir de tu casa. Un médico veterinario se desplazará hasta tu domicilio para realizar chequeos rutinarios </p>
+              </div>
+     
+              <div class="text-center m-4 p-4 bg-primario">
+                <svg xmlns=" class="icon icon-tabler icon-tabler-truck" width="96" height="96" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <circle cx="7" cy="17" r="2" />
+                  <circle cx="17" cy="17" r="2" />
+                  <path d="M5 17h-2v-11a1 1 0 0 1 1 -1h9v12m-4 0h6m4 0h2v-6h-8m0 -5h5l3 5" />
+                </svg>
+                <h3 style="color: aliceblue;" >Salud dental</h3>
+                <p class="">Una rutina que incluya cepillados y controles regulares, así como una nutrición adecuada, puede ayudar a su mascota a vivir una vida larga y saludable. </p>
+              </div>
+            
+              <div class="text-center m-4 p-4 bg-primario">
+                <svg xmlns=" class="icon icon-tabler icon-tabler-truck" width="96" height="96" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <circle cx="7" cy="17" r="2" />
+                  <circle cx="17" cy="17" r="2" />
+                  <path d="M5 17h-2v-11a1 1 0 0 1 1 -1h9v12m-4 0h6m4 0h2v-6h-8m0 -5h5l3 5" />
+                </svg>
+                <h3 style="color: aliceblue;" >Asesorias de como cuidar a tu mascota</h3>
+                <p class="">No se limita solo a bañarlo, además, siempre es importante cortar sus uñas, limpiar sus oídos, sus dientes, pelaje, etc. Mantén limpio el comedero y bebedero de agua, así como su cama y entorno. Ejercita a tu mascota. </p>
+              </div> 
                 </div>
         </div>
     </section>
