--- a/donaciones.html
+++ b/donaciones.html
@@ -43,6 +43,67 @@
       </div>
     </nav>
 <!-- navbar --> 
+
+<section>
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-12 mb-4 mt-2 text-center">
+          <h2>FUNDACIONES</h2>
+          </div>
+      </div>
+  </div>
+  <div class="container ">
+      <div class="row">
+          <div class=" text-center mt-4">
+              <img class="rounded-personalizado" alt="140x140" style="width: 1000px; height: 1000;" src="/images/fundaciones/5.png" data-holder-rendered="true">
+          </div>
+          <div class=" text-center mt-4">
+              <img class="rounded-personalizado" alt="140x140" style="width: 1000px; height: 1000;" src="/images/fundaciones/6.png" data-holder-rendered="true">
+          </div>
+          <div class=" text-center mt-4">
+              <img class="rounded-personalizado" alt="140x140" style="width: 1000px; height: 1000;" src="/images/fundaciones/7.png" data-holder-rendered="true">
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-sm-12 mt-4 mb-2 text-center">
+              <small class="blockquote-footer">Patricio Alarcon<cite title="Source Title"> Fundacion por un peludo</cite></small> 
+          </blockquote>
+          </div>
+      </div>
+      </div>
+      <div class="jumbotron">
+      <div class="container">
+          <div class="row">
+          <div class="text-center col-md-8 col-12 mx-auto">
+              <p class="lead">"El mundo sería un lugar mucho mejor si las personas tuvieran el corazón de los perros"</p>
+          </div>
+          </div>
+      </div>
+  </div>
+</section>
+<a class="btn btn-primary" data-bs-toggle="modal" href="#exampleModalToggle" role="button">Open first modal</a>
+
+<!-- pruebas para tarjetas desplegables  -->
+
+<div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalToggleLabel">Modal 1</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Show a second modal and hide this one with the button below.
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Seguir Navegando</button>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+
 </body>
 <footer class="text-center bg-secundario text-light">
   <div class="container pt-3">
