se terminan ultimos detalles y se suben los mockups al proyecto

--- a/Gatos.html
+++ b/Gatos.html
@@ -10,26 +10,65 @@
   <title>Gatos</title>
 </head>
 <body>
-  <div class="container justify-content-center w-50 vertical">
-    <div class="text-center m-4 p-4 bg-primario">
-  <div class="container margin">
-    <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+      <!-- navbar -->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top botton-line col-md-12">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="/images/logo cortado.png" alt="" width="100" height="55" class="d-inline-block align-text-top">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="Index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="tienda.html">Tienda</a>
+                </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="donaciones.html">Donaciones</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+  <!-- navbar --> 
+  <div class="container mt-5 mb-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center bg-primario">
           <h3>PAÑUELO GATO COLLAR</h3>
           <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/Bandanas.jpg" data-holder-rendered="true">
           <p>Hermosos pañuelos ajustable para gatos.</p>
-        <div>  
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> 
-        <h3>ÁRBOLES RASCADORES DE COLORES PARA GATOS</h3>
-        <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/Rascador.jpg" data-holder-rendered="true">
-        <p>Mira estos árboles de colores rascadores muy fashión para los michus.</p>  
+        </div>  
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center bg-primario"> 
+          <h3>ÁRBOLES RASCADORES DE COLORES PARA GATOS</h3>
+          <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/Rascador.jpg" data-holder-rendered="true">
+          <p>Mira estos árboles de colores rascadores muy fashión para los michus.</p>  
         </div>      
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center">     
-        <h3>CAMA ESTANTE CAPSULA</h3>
-        <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/cama de gato madera.jpg" data-holder-rendered="true">
-        <p>Cama flotante de madera para gatos</p>
-        </div>      
-</div>         
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center bg-primario">     
+          <h3>CAMA ESTANTE CAPSULA</h3>
+          <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/cama de gato madera.jpg" data-holder-rendered="true">
+          <p>Cama flotante de madera para gatos</p>
+        </div>     
+    </div> 
+  </div>        
 </body>
+<footer class="text-center bg-secundario text-light">
+  <div class="container pt-3">
+    <div class="row">
+      <div class="col-12">
+        <p>Copyright &copy; WOOF & MIAU. Todos los derechos reservados.</p>
+      </div>
+    </div>
+  </div>
+</footer>
 </html>
 
