--- a/Perros.html
+++ b/Perros.html
@@ -10,21 +10,71 @@
   <title>Perros</title>
 </head>
 <body>
+  <!-- navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top botton-line col-md-12">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="/images/logo cortado.png" alt="" width="100" height="55" class="d-inline-block align-text-top">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="Index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="tienda.html">Tienda</a>
+            </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="donaciones.html">Donaciones</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+<!-- navbar -->
+<div class="text-center">
+<h1>PRODUCTOS PARA PERROS</h1>
 </div>
-   <h3>IDENTIFICADORES PARA MASCOTAS</h3>
-   <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/Identificadores.jpg" data-holder-rendered="true">
-   <p>Chapitas identificadoras para ellos</p>
-   </div>
-   <h3>CORREAS ELASTICAS DOG</h3>        
-   <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/Correas.jpg" data-holder-rendered="true">
-   <p>Correa elastica para perros de todas las razas.</p>
-   </div> 
-   </div>
-  <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-      <h3>BOLSAS PARA PERROS</h3>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-lg-4 col-md-6 col-sm-12 text-center bg-primario">
+
       <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/Bolsas biodegradables.jpg" data-holder-rendered="true">
-       <p>Bolsas de basura compostables para perros.</p>
-  <div>
+      <h3>BOLSAS PARA PERROS</h3>
+      <p>Bolsas de basura compostables para perros.</p>
+    </div>
+
+    <div class="col-lg-4 col-md-6 col-sm-12 text-center bg-primario">
+
+      <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/Identificadores.jpg" data-holder-rendered="true">
+      <h3>IDENTIFICADORES PARA MASCOTAS</h3>
+      <p>Chapitas identificadoras para ellos</p>
+    </div>
+
+    <div class="col-lg-4 col-md-6 col-sm-12 text-center bg-primario">
+      <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/Correas.jpg" data-holder-rendered="true">
+      <h3>CORREAS ELASTICAS DOG</h3>
+      <p>Correa elastica para perros de todas las razas.</p>
+    </div>
+  </div>
 </div>
 </body>
+<footer class="text-center bg-secundario text-light">
+  <div class="container pt-3">
+    <div class="row">
+      <div class="col-12">
+        <p>Copyright &copy; WOOF & MIAU. Todos los derechos reservados.</p>
+      </div>
+    </div>
+  </div>
+</footer>
 </html>
