--- a/donaciones.html
+++ b/donaciones.html
@@ -43,7 +43,6 @@
       </div>
     </nav>
 <!-- navbar --> 
-
 <section>
   <div class="container">
       <div class="row">
@@ -52,48 +51,46 @@
           </div>
       </div>
   </div>
-  <div class="container ">
+  <div class="container">
       <div class="row">
-          <div class=" text-center mt-4">
-              <img class="rounded-personalizado" alt="140x140" style="width: 1000px; height: 1000;" src="/images/fundaciones/5.png" data-holder-rendered="true">
+          <div class="mt-4 fundacion1 rounded-personalizado">
+              <a class="btn btn-primary m-4" data-bs-toggle="modal" href="#TallerPeludo" role="button">Taller del Peludo</a>
+            </div>
+          <div class="mt-4 fundacion2 rounded-personalizado">
+            <a class="btn btn-primary m-4 " data-bs-toggle="modal" href="#bebrave" role="button">BE BRAVE fundación</a>
           </div>
-          <div class=" text-center mt-4">
-              <img class="rounded-personalizado" alt="140x140" style="width: 1000px; height: 1000;" src="/images/fundaciones/6.png" data-holder-rendered="true">
-          </div>
-          <div class=" text-center mt-4">
-              <img class="rounded-personalizado" alt="140x140" style="width: 1000px; height: 1000;" src="/images/fundaciones/7.png" data-holder-rendered="true">
-          </div>
-      </div>
-      <div class="row">
-          <div class="col-sm-12 mt-4 mb-2 text-center">
-              <small class="blockquote-footer">Patricio Alarcon<cite title="Source Title"> Fundacion por un peludo</cite></small> 
-          </blockquote>
+          <div class="mt-4 fundacion3 rounded-personalizado">
+            <a class="btn btn-primary m-4" data-bs-toggle="modal" href="#ayuda" role="button">Adopta un Peludo</a>
           </div>
       </div>
-      </div>
+        <div class="row">
+            <div class="col-sm-12 mt-4 mb-2 text-center">
+              <small class="blockquote-footer">Patricio Alarcon<cite title="Source Title"> El bromas</cite></small> 
+            </div>
+        </div>
       <div class="jumbotron">
-      <div class="container">
-          <div class="row">
-          <div class="text-center col-md-8 col-12 mx-auto">
-              <p class="lead">"El mundo sería un lugar mucho mejor si las personas tuvieran el corazón de los perros"</p>
-          </div>
-          </div>
+        <div class="container">
+            <div class="row">
+              <div class="text-center col-md-8 col-12 mx-auto">
+                  <p class="lead">"El mundo sería un lugar mucho mejor si las personas tuvieran el corazón de los perros"</p>
+              </div>
+            </div>
+        </div>
       </div>
   </div>
 </section>
-<a class="btn btn-primary" data-bs-toggle="modal" href="#exampleModalToggle" role="button">Open first modal</a>
 
-<!-- pruebas para tarjetas desplegables  -->
-
-<div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+<!-- pop up de cada fundacion-->
+<div class="modal fade" id="TallerPeludo" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalToggleLabel">Modal 1</h5>
+        <h5 class="modal-title" id="TallerPeludo">Taller del Peludo</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
-        Show a second modal and hide this one with the button below.
+      <div class="modal-body justify-content-center">
+        <img class="rounded-personalizado" src="/images/fundaciones/subseccion/1.png" alt="" width="100%" height="100%">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit odit inventore dolor suscipit omnis culpa impedit, amet exercitationem excepturi sequi quos perspiciatis, quisquam, nam hic est pariatur fuga praesentium. Dolor!
       </div>
       <div class="modal-footer">
         <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Seguir Navegando</button>
@@ -101,9 +98,41 @@
     </div>
   </div>
 </div>
+<div class="modal fade" id="bebrave" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="bebrave">BE BRAVE FUNDACION</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body justify-content-center">
+        <img class="rounded-personalizado" src="/images/fundaciones/subseccion/2.png" alt="" width="100%" height="100%">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit odit inventore dolor suscipit omnis culpa impedit, amet exercitationem excepturi sequi quos perspiciatis, quisquam, nam hic est pariatur fuga praesentium. Dolor!
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Seguir Navegando</button>
+      </div>
+    </div>
+  </div>
 </div>
-
-
+<div class="modal fade" id="ayuda" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="ayuda">Adopta un Peludo</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body justify-content-center">
+        <img class="rounded-personalizado" src="/images/fundaciones/subseccion/3.png" alt="" width="100%" height="100%">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit odit inventore dolor suscipit omnis culpa impedit, amet exercitationem excepturi sequi quos perspiciatis, quisquam, nam hic est pariatur fuga praesentium. Dolor!
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Seguir Navegando</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- pop up de cada fundacion fin -->
 </body>
 <footer class="text-center bg-secundario text-light">
   <div class="container pt-3">
