--- a/nosotros.html
+++ b/nosotros.html
@@ -44,13 +44,12 @@
     </nav>
 <!-- navbar --> 
 
-<div class="container justify-content-center w-50 vertical">
-  <div class="text-center m-4 p-4 bg-primario">
-
+<div class="container w-50">
+  <div class="text-center bg-primario">
     <h3 style="color: aliceblue;">Patricio Alarcon</h3>
     <p class="">Encargado del diseño de la pagina junto con las imagenes y diferentes estilos entregados aplicando bootstrap en toda la pagina.</p>
   </div>
-  <div class="text-center m-4 p-4 bg-primario">
+  <div class="text-center bg-primario">
     <h3 style="color: aliceblue;" >José Alcántara</h3>
     <p class="">Encargado del front-end de la pagina llevando el diseño a codigo HTML5 y CSS3 y JS.</p>
   </div>
