--- a/contacto.html
+++ b/contacto.html
@@ -43,20 +43,18 @@
       </div>
     </nav>
 <!-- navbar -->     
-<!-- Nombres, Apellidos, teléfono, email, ciudad 
-de residencia) -->
 <div class="text-center mt-3">
-<h1>Contactanos</h1>
+  <h1>Contactanos</h1>
 </div>
-<div class="p-4 bg-primario w-50 mt-3 mb-2 container uso-completo">
+<div class="container w-25 uso-completo">
   <form class="row g-3">
     <div>
       <label for="inputEmail4" class="form-label">Nombres</label>
-      <input type="email" class="form-control" id="inputEmail4">
+      <input type="text" class="form-control" id="inputEmail4">
     </div>
     <div>
       <label for="inputPassword4" class="form-label">Apellidos</label>
-      <input type="password" class="form-control" id="inputPassword4">
+      <input type="text" class="form-control" id="inputPassword4">
     </div>
     <div>
       <label for="inputAddress" class="form-label">Teléfono</label>
