--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>TIENDA WOOF AND MIAU</title>
 </head>
   <body>
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top botton-line col-md-12">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="/images/logo cortado.png" alt="" width="100" height="55" class="d-inline-block align-text-top">
+          <img src="images/logo cortado.png" alt="" width="100" height="55" class="d-inline-block align-text-top">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -56,22 +56,22 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <a href="tienda.html">
-          <img src="/images/fotos carrusel/1.png" class="d-block w-100"  alt="...">
+          <img src="images/fotos carrusel/1.png" class="d-block w-100"  alt="...">
         </a>
       </div>
       <div class="carousel-item">
         <a href="donaciones.html">
-          <img src="/images/fotos carrusel/2.png" class="d-block w-100" alt="...">
+          <img src="images/fotos carrusel/2.png" class="d-block w-100" alt="...">
         </a>
       </div>
       <div class="carousel-item">
         <a href="nosotros.html">
-          <img src="/images/fotos carrusel/3.png" class="d-block w-100" alt="...">
+          <img src="images/fotos carrusel/3.png" class="d-block w-100" alt="...">
         </a>
       </div>
       <div class="carousel-item">
         <a href="contacto.html">
-          <img src="/images/fotos carrusel/4.png" class="d-block w-100" alt="...">
+          <img src="images/fotos carrusel/4.png" class="d-block w-100" alt="...">
         </a>
       </div>
     </div>
