se agrega codigo js para validar el formulario

--- a/nosotros.html
+++ b/nosotros.html
@@ -44,6 +44,16 @@
     </nav>
 <!-- navbar --> 
 
+<div class="row">
+  <div class="col-lg-12 mb-4 mt-2 text-center">
+    <h2>NOSOTROS</h2>
+  </div>
+</div>
+</div>
+  <div class="text-center">
+    <img src="images/nosotros.png" class="rounded-personalizado" alt="">
+  </div>
+
 <div class="container w-50">
   <div class="text-center bg-primario">
     <h3 style="color: aliceblue;">Patricio Alarcon</h3>
