--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,9 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  
+  <script src="js/jQuery v3.6.0.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
+  <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/main.css">
     <title>TIENDA WOOF AND MIAU</title>
 </head>
@@ -47,31 +49,58 @@
   <h1>Contactanos</h1>
 </div>
 <div class="container w-25 uso-completo">
-  <form class="row g-3">
+  <form class="row g-3" id="formulario">
     <div>
-      <label for="inputEmail4" class="form-label">Nombres</label>
-      <input type="text" class="form-control" id="inputEmail4">
+      <label for="nombre" class="form-label">Nombre Completo</label>
+      <input type="text" class="form-control" id="nombre" name="nombre">
     </div>
+    <div class="col-sm-5 messages"></div>
     <div>
-      <label for="inputPassword4" class="form-label">Apellidos</label>
-      <input type="text" class="form-control" id="inputPassword4">
+      <label for="tel" class="form-label">Teléfono (opcional)</label>
+      <input type="tel" class="form-control" id="tel"  name="tel"placeholder="+56912345678">
     </div>
+    <div class="col-sm-5 messages"></div>
     <div>
-      <label for="inputAddress" class="form-label">Teléfono</label>
-      <input type="tel" class="form-control" id="inputAddress" placeholder="+56912345678">
+      <label for="email" class="form-label">Email</label>
+      <input type="email" class="form-control" id="email" name="email"placeholder="correo@dominio.com">
     </div>
+    <div class="col-sm-5 messages"></div>
     <div>
-      <label for="inputAddress2" class="form-label">Email</label>
-      <input type="email" class="form-control" id="inputAddress2" placeholder="correo@dominio.com">
+      <fieldset class="row mb-3">
+        <legend>Modo de identificación</legend>
+        <div class="col-sm-10">
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+            <label class="form-check-label" for="gridRadios1">
+              Rut
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+            <label class="form-check-label" for="gridRadios2">
+              Pasaporte
+            </label>
+          </div>
+        </div>
+      </fieldset>
+      <label for="rut" class="form-label">Rut</label>
+      <input type="text" class="form-control" id="rut" name="rut" placeholder="rut sin puntos y con guion">
     </div>
+    <div class="col-sm-5 messages"></div>
     <div>
-      <label for="inputCity" class="form-label">Ciudad</label>
-      <input type="text" class="form-control" id="inputCity">
+      <label for="City" class="form-label">Ciudad</label>
+      <input type="text" class="form-control" id="City" name="City">
     </div>
+    <div class="col-sm-5 messages"></div>
+    <div>
+      <p>¿En que le gustaria participar en la ONG?</p>
+      <textarea name="textarea" id="textarea" class="w-100"></textarea>
+    </div>
+    <div class="col-sm-5 messages"></div>
     <div>
       <button type="submit" class="btn btn-primary ">Enviar</button>
     </div>
-  </form>
+  </form>  
   </div>
 <div class="container text-center">
   <h4>Un representante se contactara con usted a la brevedad</h4>
