--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="js/jQuery v3.6.0.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
   <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/main.css">
     <title>TIENDA WOOF AND MIAU</title>
@@ -50,26 +52,26 @@
 </div>
 <div class="container w-25 uso-completo">
   <form class="row g-3" id="formulario">
-    <div>
+    <div class="form-group">
       <label for="nombre" class="form-label">Nombre Completo</label>
       <input type="text" class="form-control" id="nombre" name="nombre">
     </div>
-    <div class="col-sm-5 messages"></div>
-    <div>
+    <div class="col-sm-5 messages" id="messages"></div>
+    <div class="form-group">
       <label for="tel" class="form-label">Teléfono (opcional)</label>
       <input type="tel" class="form-control" id="tel"  name="tel"placeholder="+56912345678">
     </div>
-    <div class="col-sm-5 messages"></div>
-    <div>
+    <div class="col-sm-5 messages" id="messages"></div>
+    <div class="form-group">
       <label for="email" class="form-label">Email</label>
       <input type="email" class="form-control" id="email" name="email"placeholder="correo@dominio.com">
     </div>
-    <div class="col-sm-5 messages"></div>
-    <div>
+    <div class="col-sm-5 messages" id="messages"></div>
+    <div class="form-group">
       <fieldset class="row mb-3">
         <legend>Modo de identificación</legend>
         <div class="col-sm-10">
-          <div class="form-check">
+          <div class="form-check ">
             <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
             <label class="form-check-label" for="gridRadios1">
               Rut
@@ -86,17 +88,17 @@
       <label for="rut" class="form-label">Rut</label>
       <input type="text" class="form-control" id="rut" name="rut" placeholder="rut sin puntos y con guion">
     </div>
-    <div class="col-sm-5 messages"></div>
-    <div>
+    <div class="col-sm-5 messages" id="messages"></div>
+    <div class="form-group">
       <label for="City" class="form-label">Ciudad</label>
       <input type="text" class="form-control" id="City" name="City">
     </div>
-    <div class="col-sm-5 messages"></div>
-    <div>
+    <div class="col-sm-5 messages" id="messages"></div>
+    <div class="form-group">
       <p>¿En que le gustaria participar en la ONG?</p>
       <textarea name="textarea" id="textarea" class="w-100"></textarea>
     </div>
-    <div class="col-sm-5 messages"></div>
+    <div class="col-sm-5 messages" id="messages"></div>
     <div>
       <button type="submit" class="btn btn-primary ">Enviar</button>
     </div>
