--- a/contacto.html
+++ b/contacto.html
@@ -6,14 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script src="js/jQuery v3.6.0.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
-  <script src="js/main.js"></script>
-    <link rel="stylesheet" href="css/main.css">
-    <title>TIENDA WOOF AND MIAU</title>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="js/jQuery v3.6.0.js"></script>
+<script src="js/validate.js"></script>
+<link rel="stylesheet" href="css/main.css">
+<title>TIENDA WOOF AND MIAU</title>
 </head>
   <body>
   <!-- navbar -->
@@ -51,22 +48,22 @@
   <h1>Contactanos</h1>
 </div>
 <div class="container w-25 uso-completo">
-  <form class="row g-3" id="formulario">
+  <form class="row g-3 form needs-validation" id="formulario" novalidate>
     <div class="form-group">
       <label for="nombre" class="form-label">Nombre Completo</label>
-      <input type="text" class="form-control" id="nombre" name="nombre">
+      <input type="text" class="form-control" id="nombre" name="nombre" required>
     </div>
-    <div class="col-sm-5 messages" id="messages"></div>
+            <div class="col-sm-5 messages"></div>
     <div class="form-group">
       <label for="tel" class="form-label">Teléfono (opcional)</label>
       <input type="tel" class="form-control" id="tel"  name="tel"placeholder="+56912345678">
     </div>
-    <div class="col-sm-5 messages" id="messages"></div>
+            <div class="col-sm-5 messages"></div>
     <div class="form-group">
       <label for="email" class="form-label">Email</label>
-      <input type="email" class="form-control" id="email" name="email"placeholder="correo@dominio.com">
+      <input type="email" class="form-control" id="email" name="email"placeholder="correo@dominio.com" required>
     </div>
-    <div class="col-sm-5 messages" id="messages"></div>
+            <div class="col-sm-5 messages"></div>
     <div class="form-group">
       <fieldset class="row mb-3">
         <legend>Modo de identificación</legend>
@@ -78,7 +75,7 @@
             </label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2" >
             <label class="form-check-label" for="gridRadios2">
               Pasaporte
             </label>
@@ -86,19 +83,19 @@
         </div>
       </fieldset>
       <label for="rut" class="form-label">Rut</label>
-      <input type="text" class="form-control" id="rut" name="rut" placeholder="rut sin puntos y con guion">
+      <input type="text" class="form-control" id="rut" name="rut" placeholder="rut sin puntos y con guion" required>
     </div>
-    <div class="col-sm-5 messages" id="messages"></div>
+            <div class="col-sm-5 messages"></div>
     <div class="form-group">
       <label for="City" class="form-label">Ciudad</label>
-      <input type="text" class="form-control" id="City" name="City">
+      <input type="text" class="form-control" id="City" name="City" required>
     </div>
-    <div class="col-sm-5 messages" id="messages"></div>
+            <div class="col-sm-5 messages"></div>
     <div class="form-group">
       <p>¿En que le gustaria participar en la ONG?</p>
-      <textarea name="textarea" id="textarea" class="w-100"></textarea>
+      <textarea name="textarea" id="textarea" class="w-100"></textarea required>
     </div>
-    <div class="col-sm-5 messages" id="messages"></div>
+            <div class="col-sm-5 messages"></div>
     <div>
       <button type="submit" class="btn btn-primary ">Enviar</button>
     </div>
@@ -107,6 +104,7 @@
 <div class="container text-center">
   <h4>Un representante se contactara con usted a la brevedad</h4>
 </div>
+<script src="js/main.js"></script>
 </body>
 <footer class="text-center bg-secundario text-light mt-4">
   <div class="container pt-3">
