Creacion de json en duro dentro de main para seleccionar comuna y region

--- a/tienda.html
+++ b/tienda.html
@@ -8,7 +8,7 @@
   </div>
 </div>
     <div class="text-center">
-      <img src="images/Gato&perros.jpeg" alt="">
+      <img src="images/Gato&perros.jpeg" class="w-100" alt="">
     </div>
     <a href="Gatos.html">
       <div class="container justify-content-center w-50 vertical">
