--- a/contacto.html
+++ b/contacto.html
@@ -5,54 +5,35 @@
 <div class="container w-25 uso-completo">
   <form class="row g-3 form needs-validation" id="formulario" novalidate>
     <div class="form-group">
-      <label for="nombre" class="form-label">Nombre Completo</label>
+      <label for="nombre" class="form-label">Nombres</label>
       <input type="text" class="form-control" id="nombre" name="nombre" required>
     </div>
-            <div class="col-sm-5 messages"></div>
+    <div class="form-group">
+      <label for="apellido" class="form-label">Apellidos</label>
+      <input type="text" class="form-control" id="apellido" name="apellido" required>
+    </div>
     <div class="form-group">
       <label for="tel" class="form-label">Teléfono (opcional)</label>
-      <input type="tel" class="form-control" id="tel"  name="tel"placeholder="+56912345678">
+      <input type="tel" class="form-control" id="tel"  name="tel"placeholder="+56987654321">
     </div>
-            <div class="col-sm-5 messages"></div>
     <div class="form-group">
       <label for="email" class="form-label">Email</label>
       <input type="email" class="form-control" id="email" name="email"placeholder="correo@dominio.com" required>
     </div>
-            <div class="col-sm-5 messages"></div>
     <div class="form-group">
-      <fieldset class="row mb-3">
-        <legend>Modo de identificación</legend>
-        <div class="col-sm-10">
-          <div class="form-check ">
-            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
-            <label class="form-check-label" for="gridRadios1">
-              Rut
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2" >
-            <label class="form-check-label" for="gridRadios2">
-              Pasaporte
-            </label>
-          </div>
-        </div>
-      </fieldset>
-      <label for="rut" class="form-label">Rut</label>
-      <input type="text" class="form-control" id="rut" name="rut" placeholder="rut sin puntos y con guion" required>
+      <label for="direccion" class="form-label">Dirección</label>
+      <input type="text" class="form-control" id="Direccion" name="Direccion" placeholder="Direccion con numeracion" required>
     </div>
-            <div class="col-sm-5 messages"></div>
     <div class="form-group">
-      <label for="City" class="form-label">Ciudad</label>
-      <input type="text" class="form-control" id="City" name="City" required>
+      <label for="region" class="form-label">Región</label> 
+      <select  class="form-control" id="regiones" required></select>
     </div>
-            <div class="col-sm-5 messages"></div>
     <div class="form-group">
-      <p>¿En que le gustaria participar en la ONG?</p>
-      <textarea name="textarea" id="textarea" class="w-100"></textarea required>
+      <label for="comuna" class="form-label">Comuna</label>
+      <select class="form-control" id="comunas"  required></select>
     </div>
-            <div class="col-sm-5 messages"></div>
     <div>
-      <button type="submit" class="btn btn-primary ">Enviar</button>
+      <button type="submit" class="btn btn-primary " id="envio">Enviar</button>
     </div>
   </form>  
   </div>
