--- a/contacto.html
+++ b/contacto.html
@@ -13,8 +13,8 @@
       <input type="text" class="form-control" id="apellido" name="apellido" required>
     </div>
     <div class="form-group">
-      <label for="tel" class="form-label">Teléfono (opcional)</label>
-      <input type="tel" class="form-control" id="tel"  name="tel"placeholder="+56987654321">
+      <label for="tel" class="form-label">Teléfono</label>
+      <input type="tel" class="form-control" id="tel" name="tel" placeholder="+56987654321" required>
     </div>
     <div class="form-group">
       <label for="email" class="form-label">Email</label>
